--- a/index.html
+++ b/index.html
@@ -2,89 +2,194 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Planning Sports</title>
+  <title>📅 Planification Sportive</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-firestore-compat.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script type="module" src="/main.js" defer></script>
   <style>
-    .team-logo {
-      width: 30px;
-      height: 30px;
-      object-fit: contain;
-    }
-    .vs {
-      font-weight: bold;
-      font-size: 1.2rem;
-      margin: 0 10px;
-    }
-    #loginSection {
-      position: absolute;
-      top: 1rem;
-      right: 1rem;
-    }
+    .team-logo { width: 32px; height: 32px; object-fit: contain; }
+    .vs { font-weight: bold; font-size: 1.1rem; margin: 0 10px; }
+    .live-badge { color: red; font-weight: bold; margin-left: 10px; }
   </style>
 </head>
 <body class="bg-light">
   <div class="container py-4">
-    <div id="loginSection">
-      <button id="loginBtn" class="btn btn-outline-primary">Connexion</button>
-      <button id="logoutBtn" class="btn btn-outline-danger d-none">Déconnexion</button>
+    <div class="d-flex justify-content-between mb-4">
+      <h2>📺 Matchs à venir</h2>
+      <button id="loginBtn" class="btn btn-outline-primary btn-sm">Se connecter</button>
     </div>
-
-    <h1 class="text-center mb-4">⚽ Matchs à venir</h1>
 
     <!-- Filtres -->
-    <div class="row mb-4">
-      <div class="col-md-4">
-        <input type="text" id="searchInput" class="form-control" placeholder="🔍 Recherche par équipe ou compétition">
+    <div class="row mb-3">
+      <div class="col-md-3">
+        <input id="searchInput" class="form-control" placeholder="🔍 Rechercher">
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <select id="sportSelect" class="form-select">
           <option value="">Tous les sports</option>
-          <option value="Football">Football</option>
-          <option value="Rugby">Rugby</option>
-          <option value="Tennis">Tennis</option>
-          <option value="F1">F1</option>
-          <option value="MotoGP">MotoGP</option>
+          <option value="Football">⚽ Football</option>
+          <option value="F1">🏎️ F1</option>
+          <option value="MotoGP">🏍️ MotoGP</option>
         </select>
+      </div>
+      <div class="col-md-2">
+        <button id="loadMoreBtn" class="btn btn-secondary w-100">+ Plus</button>
       </div>
     </div>
 
-    <div id="match-list" class="row g-4"></div>
+    <!-- Liste matchs -->
+    <div id="matchList" class="row g-3"></div>
 
-    <!-- Formulaire d'ajout admin -->
-    <div id="adminForm" class="mt-5 d-none">
-      <h3>Ajouter un match</h3>
+    <!-- Formulaire admin -->
+    <div id="adminForm" class="mt-5" style="display:none">
+      <h4>🛠️ Ajouter / Modifier un match</h4>
       <form id="matchForm">
-        <div class="row g-2">
-          <div class="col-md-3"><input type="text" id="competition" placeholder="Compétition" class="form-control" required></div>
-          <div class="col-md-3"><input type="text" id="sport" placeholder="Sport" class="form-control" required></div>
-          <div class="col-md-3"><input type="date" id="date" class="form-control" required></div>
-          <div class="col-md-3"><input type="time" id="time" class="form-control" required></div>
-        </div>
-        <div class="row g-2 mt-2">
-          <div class="col-md-3"><input type="text" id="homeName" placeholder="Équipe domicile" class="form-control" required></div>
-          <div class="col-md-3"><input type="url" id="homeLogo" placeholder="Logo domicile" class="form-control"></div>
-          <div class="col-md-3"><input type="text" id="awayName" placeholder="Équipe extérieur" class="form-control" required></div>
-          <div class="col-md-3"><input type="url" id="awayLogo" placeholder="Logo extérieur" class="form-control"></div>
-        </div>
-        <div class="row g-2 mt-2">
-          <div class="col-md-6"><input type="text" id="broadcastName" placeholder="Chaîne TV" class="form-control"></div>
-          <div class="col-md-4"><input type="url" id="broadcastUrl" placeholder="URL streaming" class="form-control"></div>
-          <div class="col-md-2 form-check pt-2">
-            <input type="checkbox" id="broadcastPaid" class="form-check-input">
-            <label class="form-check-label">Payant</label>
+        <div class="row mb-2">
+          <div class="col-md-4">
+            <input type="text" class="form-control" placeholder="Sport" name="sport" required>
+          </div>
+          <div class="col-md-4">
+            <input type="text" class="form-control" placeholder="Compétition" name="competition" required>
+          </div>
+          <div class="col-md-4">
+            <input type="date" class="form-control" name="date" required>
           </div>
         </div>
-        <button type="submit" class="btn btn-success mt-3">Ajouter</button>
+        <div class="row mb-2">
+          <div class="col-md-3"><input type="text" class="form-control" placeholder="Équipe domicile" name="home" required></div>
+          <div class="col-md-3"><input type="text" class="form-control" placeholder="Équipe extérieur" name="away" required></div>
+          <div class="col-md-2"><input type="time" class="form-control" name="time" required></div>
+          <div class="col-md-2"><input type="text" class="form-control" placeholder="Chaîne TV" name="channel"></div>
+          <div class="col-md-2"><input type="url" class="form-control" placeholder="URL streaming" name="link"></div>
+        </div>
+        <div class="row mb-2">
+          <div class="col-md-2"><input type="number" class="form-control" placeholder="Score dom" name="scoreHome"></div>
+          <div class="col-md-2"><input type="number" class="form-control" placeholder="Score ext" name="scoreAway"></div>
+        </div>
+        <input type="hidden" name="id">
+        <button type="submit" class="btn btn-success">💾 Enregistrer</button>
       </form>
     </div>
   </div>
+
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyBToR5BXaPHsg8GgMosJBMompqUU1LBGG8",
+      authDomain: "planning-sports.firebaseapp.com",
+      projectId: "planning-sports",
+      storageBucket: "planning-sports.appspot.com",
+      messagingSenderId: "808656601330",
+      appId: "1:808656601330:web:02c6c6c54e4cc705d6d06b"
+    };
+
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
+    const auth = firebase.auth();
+
+    const loginBtn = document.getElementById('loginBtn');
+    const matchList = document.getElementById('matchList');
+    const matchForm = document.getElementById('matchForm');
+    const adminForm = document.getElementById('adminForm');
+    const loadMoreBtn = document.getElementById('loadMoreBtn');
+    const searchInput = document.getElementById('searchInput');
+    const sportSelect = document.getElementById('sportSelect');
+
+    let lastVisible = null;
+    let currentUser = null;
+
+    loginBtn.onclick = () => {
+      auth.signInWithPopup(new firebase.auth.GoogleAuthProvider());
+    };
+
+    auth.onAuthStateChanged(user => {
+      if (user) {
+        loginBtn.innerText = `Déconnexion (${user.displayName})`;
+        loginBtn.onclick = () => auth.signOut();
+        adminForm.style.display = 'block';
+        currentUser = user;
+      } else {
+        loginBtn.innerText = 'Se connecter';
+        adminForm.style.display = 'none';
+        currentUser = null;
+      }
+    });
+
+    async function loadMatches(reset = true) {
+      let ref = db.collection('matches')
+        .where('date', '>=', new Date().toISOString().split('T')[0])
+        .orderBy('date')
+        .limit(5);
+
+      const search = searchInput.value.toLowerCase();
+      const selectedSport = sportSelect.value;
+
+      if (lastVisible && !reset) {
+        ref = ref.startAfter(lastVisible);
+      }
+
+      const snap = await ref.get();
+      if (reset) matchList.innerHTML = '';
+
+      snap.forEach(doc => {
+        const match = doc.data();
+        const id = doc.id;
+
+        if (selectedSport && match.sport !== selectedSport) return;
+        if (search && ![match.home, match.away, match.competition].some(v => v.toLowerCase().includes(search))) return;
+
+        const now = new Date();
+        const matchDate = new Date(`${match.date}T${match.time}`);
+        const isLive = matchDate <= now && now <= new Date(matchDate.getTime() + 2 * 60 * 60 * 1000);
+
+        const div = document.createElement('div');
+        div.className = 'col-md-6';
+        div.innerHTML = `
+          <div class="card p-3">
+            <h6>${match.sport} — ${match.competition} ${isLive ? '<span class="live-badge">🔴 EN COURS</span>' : ''}</h6>
+            <p><strong>${match.home}</strong> ${match.scoreHome ?? ''} - ${match.scoreAway ?? ''} <strong>${match.away}</strong></p>
+            <p>🕒 ${match.date} à ${match.time}</p>
+            ${match.channel ? `<p>📺 ${match.channel} ${match.link ? `<a href="${match.link}" target="_blank">(voir)</a>` : ''}</p>` : ''}
+            ${currentUser ? `<button class="btn btn-sm btn-outline-secondary" onclick="editMatch('${id}')">✏️ Modifier</button>` : ''}
+          </div>
+        `;
+        matchList.appendChild(div);
+      });
+
+      lastVisible = snap.docs[snap.docs.length - 1];
+    }
+
+    loadMatches();
+
+    matchForm.onsubmit = async e => {
+      e.preventDefault();
+      const formData = new FormData(matchForm);
+      const data = Object.fromEntries(formData.entries());
+
+      if (data.id) {
+        await db.collection('matches').doc(data.id).update(data);
+      } else {
+        await db.collection('matches').add(data);
+      }
+
+      matchForm.reset();
+      loadMatches();
+    };
+
+    window.editMatch = async (id) => {
+      const doc = await db.collection('matches').doc(id).get();
+      const match = doc.data();
+      for (const key in match) {
+        if (matchForm[key]) matchForm[key].value = match[key];
+      }
+      matchForm.id.value = id;
+    };
+
+    loadMoreBtn.onclick = () => loadMatches(false);
+    searchInput.oninput = () => loadMatches();
+    sportSelect.onchange = () => loadMatches();
+  </script>
 </body>
 </html>
 
-<!-- Le fichier main.js doit maintenant inclure : -->
-<!-- - Firebase Auth pour login/logout -->
-<!-- - Firestore pour chargement/ajout des matchs -->
-<!-- - Filtres, recherche, pagination -->
-<!-- Je t’intègre le code JS complet dans le message suivant si tu veux. -->
